# go-capnp

./: .gitignore  .travis.yml  AUTHORS  BUILD.bazel  CHANGELOG.md  CONTRIBUTORS  LICENSE  Makefile  README.md  WORKSPACE  address.go  address_test.go  allocator.go  answer.go  answer_admission_test.go  answer_claim_test.go  answer_test.go  answerqueue.go  arena.go  arena_example_test.go  arena_external_test.go  arena_test.go  boollist_test.go  call.go  canonical.go  canonical_test.go  capability.go  capability_admit_test.go  capability_test.go  capability_ticket_test.go  capn.go  capn_test.go  capnproto.go  captable.go  captable_test.go  chkfatal.go  codec.go  codec_test.go  common_test.go  compress_test.go  (+61 more)
.github/: FUNDING.yml
.github/workflows/: go.yml
_travis/: bazelrc  build.bash  install.bash
aircraftlib/: Makefile  aircraft.capnp  aircraft.capnp.go  generate.go  go.capnp
c/: .gitignore  Makefile  capn-list.c  capn-list.inc  capn-malloc.c  capn-stream-test.cpp  capn-stream.c  capn-test.cpp  capn.c  capn.h
c/compiler/: capnpc-c.c  schema-test.cpp  schema.c  schema.capnp  schema.capnp.c  schema.capnp.h  schema.h  simple.capnp  str.c  str.h
capngoc/: c.go  go.go  parser.go
capngoc/test/: test.capnp
capnpc-go/: BUILD.bazel  any_pointer.go  capnpc-go.go  capnpc-go_test.go  embed.go  fileparts.go  nodes.go  parts.go  schema.capnp  schema.capnp.go  templateparams.go  templates.go
capnpc-go/templates/: _checktag  _hasfield  _settag  baseStructFuncs  capability  constants  enum  interfaceClient  interfaceList  interfaceServer  listValue  newStructFunc  pointerValue  promise  promiseCapabilityField  promiseFieldAnyList  promiseFieldAnyPointer  promiseFieldInterface  promiseFieldStruct  promiseGroup  schemaVar  settag  structAnyListField  structAnyStructField  structBoolField  structCapabilityField  structDataField  structEnums  structFloatField  structFuncs  structGroup  structIntField  structInterfaceField  structList  structListField  structPointerField  structStructField  structTextField  structTypes  structUintField  (+2 more)
capnpc-go/testdata/: aircraft.capnp.out  const.capnp  const.capnp.out  go.capnp.out  group.capnp  group.capnp.out  otherscopes.capnp  persistent-samepkg.capnp  persistent-simple-and-samepkg.capnp.out  persistent-simple.capnp  persistent-simple.capnp.out  scopes.capnp  scopes.capnp.out  util.capnp  util.capnp.out
data/: check.zdate.cpz  gen-bvec.sh
debugging/: debugging.go
deferred/: queue.go
docs/: Getting-Started.md  Installation.md  Remote-Procedure-Calls-using-Interfaces.md  Working-with-Cap'n-Proto-Types.md  Working-with-Capn-Proto-Types.md  Writing-Schemas-and-Generating-Code.md
encoding/text/: BUILD.bazel  marshal.go  marshal_test.go
example/: main.go  z.capnp
example/books/: README.md  books.capnp
example/hashes/: .gitignore  README.md  go.mod  go.sum  hashes.capnp  hashesserver.go
exc/: exc.go  exc_test.go  types.go  types_test.go
exn/: exn.go  exn_test.go  wrap.go
exp/bufferpool/: pool.go  pool_internal_test.go  pool_test.go
exp/clock/: clock.go
exp/mpsc/: mpsc.go
exp/spsc/: spsc.go  spsc_test.go
flowcontrol/: bbr.go  fixed.go  fixed_test.go  flowlimiter.go  nop.go  nop_test.go
flowcontrol/bbr/: filter.go  filter_test.go  gate_state.go  gate_state_test.go  limiter.go  limiter_test.go  queue_test.go  simulator_test.go  snapshot.go  state.go  trace_test.go  util_test.go
flowcontrol/tracing/: tracelimiter.go
go_capnp_test/: .test.go.swo  Makefile  test.go
internal/aircraftlib/: BUILD.bazel  aircraft.capnp  aircraft.capnp.go  aircraft_test.go  experimental.go
internal/bbr/: doc.go  filter.go  filter_test.go  limiter.go  limiter_test.go  manager.go  manager_test.go  queue.go  queue_test.go  ringbuffer.go  (+6 more)
internal/demo/: BUILD.bazel  book_test.go  hash_test.go
internal/demo/books/: BUILD.bazel  books.capnp  books.capnp.go  gen.go
internal/demo/hashes/: gen.go  hash.capnp  hash.capnp.go
internal/errors/: BUILD.bazel  errors.go  errors_test.go
internal/nodemap/: BUILD.bazel  nodemap.go  nodemap_test.go
internal/packed/: BUILD.bazel  discard.go  discard_go14.go  fuzz.go  packed.go  packed_test.go
maps/: maps.go
maybe/: maybe.go
msgs/: msgs.capnp  msgs.capnp.go
orerr/: orerr.go
packed/: packed_test.go
pogs/: BUILD.bazel  bench_test.go  doc.go  embed_test.go  example_test.go  extract.go  fields.go  insert.go  interface_test.go  pogs.go  pogs_test.go
rc/: interface.go  ref.go  ref_test.go
rpc/: 3ph_test.go  BUILD.bazel  Serve.go  answer.go  answer_lock_test.go  bench_test.go  cancel_test.go  codec.go  embargo_test.go  errors.go  example_test.go  export.go  flow_test.go  idgen_test.go  import.go  introspect.go  issue3_test.go  level0_test.go  level1_test.go  localpromise_test.go  log.go  manager.go  network.go  network_test.go  pipe_test.go  pipeline_chain_test.go  process.go  promise.go  promise_test.go  promised_target_test.go  question.go  question_lifecycle_test.go  receiveranswer_test.go  release_test.go  releaselist.go  rpc.go  rpc_test.go  send.go  send_outcome_test.go  sender.go  (+12 more)
rpc/internal/logtransport/: logtransport.go
rpc/internal/pipetransport/: pipetransport.go
rpc/internal/proc/: proc.go
rpc/internal/refcount/: refcount.go  refcount_test.go
rpc/internal/rpc/: rpc.capnp  rpc.capnp.go
rpc/internal/testcapnp/: BUILD.bazel  Makefile  generate.go  test.capnp  test.capnp.go
rpc/internal/testnetwork/: generate.go  testnetwork.capnp  testnetwork.capnp.go  testnetwork.go  testnetwork_test.go
rpc/rpccapnp/: generate.go  rpc.capnp  rpc.capnp.go
rpc/transport/: pipe.go  pipe_test.go  transport.go  transport_go19_test.go  transport_test.go
schemas/: BUILD.bazel  schemas.go  schemas_test.go
server/: BUILD.bazel  answer.go  example_test.go  server.go  server_test.go
slices/: slices.go
std/: fixups.patch  gen.sh  go.capnp
std/capnp/persistent/: BUILD.bazel  persistent.capnp.go
std/capnp/rpc/: BUILD.bazel  rpc.capnp.go
stream/: connection.go  stream.go
test/: test.capnp  test.capnp.c  test.capnp.go  test.capnp.h
thunk/: thunk.go
util/: chkfatal_test.go
(+95 files in other folders)
