load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_prefix", "go_test", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "zombiezen.com/go/capnproto2",
)

go_prefix("zombiezen.com/go/capnproto2")

go_library(
    name = "go_default_library",
    srcs = [
        "address.go",
        "answer.go",
        "canonical.go",
        "capability.go",
        "doc.go",
        "error.go",
        "go.capnp.go",
        "list.go",
        "message.go",
        "message_go18.go",
        "message_other.go",
        "pointer.go",
        "rawpointer.go",
        "segment.go",
        "struct.go",
    ],
    importpath = "zombiezen.com/go/capnproto2",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/errors:go_default_library",
        "//internal/packed:go_default_library",
        "//internal/strquote:go_default_library",
        "//schemas:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "address_test.go",
        "answer_test.go",
        "canonical_test.go",
        "capability_test.go",
        "list_test.go",
        "message_test.go",
        "pointer_test.go",
        "rawpointer_test.go",
        "readlimit_test.go",
        "segment_test.go",
    ],
    embed = [":go_default_library"],
    importpath = "zombiezen.com/go/capnproto2",
)

go_test(
    name = "go_default_xtest",
    srcs = [
        "example_test.go",
        "integration_test.go",
        "integrationutil_test.go",
    ],
    data = [
        "//internal/aircraftlib:schema",
    ],
    importpath = "zombiezen.com/go/capnproto2_test",
    deps = [
        ":go_default_library",
        "//internal/aircraftlib:go_default_library",
        "//internal/capnptool:go_default_library",
    ],
)
