load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "rpc.go",
        "transport.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//std/capnp/rpc:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = [
        "pipe_test.go",
        "rpc_test.go",
        "transport_test.go",
    ],
    deps = [
        ":go_default_library",
        "//:go_default_library",
        "//pogs:go_default_library",
        "//std/capnp/rpc:go_default_library",
    ],
)
