load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "answer.go",
        "export.go",
        "idgen.go",
        "import.go",
        "question.go",
        "rpc.go",
        "transport.go",
    ],
    importpath = "capnproto.org/go/capnp/v3/rpc",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//internal/errors:go_default_library",
        "//std/capnp/rpc:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = [
        "bench_test.go",
        "level0_test.go",
        "level1_test.go",
        "pipe_test.go",
        "transport_go19_test.go",
        "transport_test.go",
    ],
    deps = [
        ":go_default_library",
        "//:go_default_library",
        "//pogs:go_default_library",
        "//rpc/internal/testcapnp:go_default_library",
        "//server:go_default_library",
        "//std/capnp/rpc:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["idgen_test.go"],
    embed = [":go_default_library"],
)
