load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["schemas.go"],
    importpath = "zombiezen.com/go/capnproto2/schemas",
    visibility = ["//visibility:public"],
    deps = ["//internal/packed:go_default_library"],
)

go_test(
    name = "go_default_xtest",
    srcs = ["schemas_test.go"],
    importpath = "zombiezen.com/go/capnproto2/schemas_test",
    deps = [
        ":go_default_library",
        "//:go_default_library",
        "//internal/schema:go_default_library",
    ],
)
