load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "answer.go",
        "server.go",
    ],
    importpath = "capnproto.org/go/capnp/v3/server",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//internal/errors:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = [
        "example_test.go",
        "server_test.go",
    ],
    deps = [
        ":go_default_library",
        "//:go_default_library",
        "//internal/aircraftlib:go_default_library",
    ],
)
