load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["doc.go"],
    importpath = "zombiezen.com/go/capnproto2/internal/demo",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "go_default_xtest",
    srcs = ["book_test.go"],
    importpath = "zombiezen.com/go/capnproto2/internal/demo_test",
    deps = [
        "//:go_default_library",
        "//internal/demo/books:go_default_library",
    ],
)
