load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["nodemap.go"],
    importpath = "capnproto.org/go/capnp/v3/internal/nodemap",
    visibility = ["//:__subpackages__"],
    deps = [
        "//:go_default_library",
        "//internal/schema:go_default_library",
        "//schemas:go_default_library",
    ],
)
