load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "generate.go",
        "test.capnp.go",
    ],
    importpath = "capnproto.org/go/capnp/v3/rpc/internal/testcapnp",
    visibility = ["//rpc:__subpackages__"],
    deps = [
        "//:go_default_library",
        "//encoding/text:go_default_library",
        "//schemas:go_default_library",
        "//server:go_default_library",
    ],
)
