load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["persistent.capnp.go"],
    importpath = "capnproto.org/go/capnp/v3/std/capnp/persistent",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//encoding/text:go_default_library",
        "//schemas:go_default_library",
        "//server:go_default_library",
    ],
)
